--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
  
 </tr></tbody></table></div></div></section></div></body></html>  
 
-<p style="font-size:160%; color:red;" >All right reserved for this Gallery Theme to  (Seph-70007000) Do not copy without permission!</p>
+<p style="font-size:160%; color:white;" >All right reserved for this Gallery Theme to  (Seph-70007000) Do not copy without permission!</p>
 	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
