--- a/index.html
+++ b/index.html
@@ -515,9 +515,9 @@
           
  
 </tr></tbody></table></div></div></section></div></body></html>  
-
+<center>
 <p style="font-size:160%; color:white;" >All right reserved for this Gallery Theme to  (Seph-70007000) Do not copy without permission!</p>
-	
+	</center>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
