--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
  
 		  
 <!-- body . -->
-
+<center> 
 
 	  
 
@@ -515,6 +515,7 @@
           
  
 </tr></tbody></table></div></div></section></div></body></html>  
+	  </center>
 <center>
 <p style="font-size:160%; color:white;" >All right reserved for this Gallery Theme to  (Seph-70007000) Do not copy without permission!</p>
 	</center>
