--- a/index.html
+++ b/index.html
@@ -79,13 +79,11 @@
         <ul class="navbar-nav">
 		
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" target="_blank" href="https://sephirothcoding.github.io/mix3/">PcBack (Photo Private)</a>
+            <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/ps/3Sw3Uu">PcBack (Photo Private)</a>
           </li>
+	
 		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" target="_blank" href="https://flic.kr/s/aHBqjzxTnK">Fondos (Backgrounds)</a>
-          </li>
-		<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" target="_blank" href="">XATSPACE</a>
+            <a class="nav-link js-scroll-trigger" target="_blank" href="">Player</a>
           </li>
 			
 		
