--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://xatimg.com/image/zcSMyuDqXtxa.jpg" alt="">
         </span>
       </a>
 	<h2 class="mb-5">MENU GALLERY </h2>    
