--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </div> 
 <div class="banner"> 
-<img src="https://i.imgur.com/aDA01g3.gif" /> </div> </div>
+<img src="https://imgur.com/gNi1uZL.gif" /> </div> </div>
 
 
 <span></span> 
