--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </div> 
 <div class="banner"> 
-<img src="https://imgur.com/JS4akde.gif" /> </div> </div>
+<img src="https://imgur.com/D9pbCuR" /> </div> </div>
 
 
 <span></span> 
